@@ -1,3 +1,11 @@
+2007-10-18 [paul]	3.0.2cvs85
+
+	* configure.ac
+		add info about NNTP support via libetpan
+		change the configure output ending msg a little
+	* src/gtk/about.c
+		similar changes to above
+
 2007-10-18 [colin]	3.0.2cvs84
 
 	* src/procmime.c
